<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ProductViewItemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="139dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/itemImage"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:src="@drawable/realme_c1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_favorite_border_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/itemTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/realme_c1_3gb_32gb_cross_black"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toStartOf="@+id/like"
                app:layout_constraintStart_toEndOf="@+id/itemImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_4_3"
                android:textColor="#FFF400"
                app:drawableLeftCompat="@drawable/ic_baseline_star_24"
                app:drawableStartCompat="@drawable/ic_baseline_star_24"
                app:layout_constraintStart_toEndOf="@+id/itemImage"
                app:layout_constraintTop_toBottomOf="@+id/itemTitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/_6"
                app:layout_constraintStart_toEndOf="@+id/star"
                app:layout_constraintTop_toBottomOf="@+id/itemTitle" />

            <TextView
                android:id="@+id/aamount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9_599"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/itemImage"
                app:layout_constraintTop_toBottomOf="@+id/star" />

            <TextView
                android:id="@+id/aamountCut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:layout_marginLeft="10dp"

                android:text="9999"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/aamount"
                app:layout_constraintStart_toEndOf="@+id/aamount"
                app:layout_constraintTop_toTopOf="@+id/aamount" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/_4_off"
                android:textColor="@android:color/holo_green_dark"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/aamountCut"
                app:layout_constraintTop_toTopOf="@id/aamountCut" />

            <TextView
                android:layout_width="106dp"
                android:layout_height="27dp"
                android:layout_marginTop="10dp"
                android:background="#31ED31"
                android:gravity="center"
                android:text="Order accepted"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/itemImage"
                app:layout_constraintTop_toBottomOf="@id/aamountCut" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>